SDKs/twilio.com/twilio_messaging_v1/1.37.4/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.CreateAlphaSenderRequest(
    security=operations.CreateAlphaSenderSecurity(
        account_sid_auth_token=shared.SchemeAccountSidAuthToken(
            password="YOUR_PASSWORD_HERE",
            username="YOUR_USERNAME_HERE",
        ),
    ),
    path_params=operations.CreateAlphaSenderPathParams(
        service_sid="rerum",
    ),
    request=operations.CreateAlphaSenderCreateAlphaSenderRequest(
        alpha_sender="tempore",
    ),
)
    
res = s.create_alpha_sender(req)

if res.messaging_v1_service_alpha_sender is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `create_alpha_sender`
* `create_brand_registrations`
* `create_brand_vetting`
* `create_external_campaign`
* `create_phone_number`
* `create_service`
* `create_short_code`
* `create_tollfree_verification`
* `create_us_app_to_person`
* `delete_alpha_sender`
* `delete_domain_cert_v4`
* `delete_phone_number`
* `delete_service`
* `delete_short_code`
* `delete_us_app_to_person`
* `fetch_alpha_sender`
* `fetch_brand_registrations`
* `fetch_brand_vetting`
* `fetch_deactivation` - Fetch a list of all United States numbers that have been deactivated on a specific date.
* `fetch_domain_cert_v4`
* `fetch_domain_config`
* `fetch_phone_number`
* `fetch_service`
* `fetch_short_code`
* `fetch_tollfree_verification`
* `fetch_us_app_to_person`
* `fetch_us_app_to_person_usecase`
* `fetch_usecase`
* `list_alpha_sender`
* `list_brand_registrations`
* `list_brand_vetting`
* `list_phone_number`
* `list_service`
* `list_short_code`
* `list_tollfree_verification`
* `list_us_app_to_person`
* `update_brand_registrations`
* `update_domain_cert_v4`
* `update_domain_config`
* `update_service`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
